<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.sswhatsapp.activities.LogInActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:contentDescription="@string/makes_screen_scrollable"
            android:fitsSystemWindows="true"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_horizontal_layout_x_large"
                android:paddingVertical="@dimen/padding_vertical_layout_large"
                tools:context="com.example.sswhatsapp.activities.LogInActivity">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/img_app_icon"
                    android:layout_width="@dimen/size_standard_app_icon"
                    android:layout_height="@dimen/size_standard_app_icon"
                    android:src="@drawable/app_icon"
                    app:layout_constraintEnd_toStartOf="@id/txt_layout_title"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_layout_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/size_layout_title"
                    app:layout_constraintBottom_toBottomOf="@id/img_app_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_app_icon"
                    app:layout_constraintTop_toTopOf="@id/img_app_icon" />


                <TextView
                    android:id="@+id/txt_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/size_layout_sub_title"
                    app:layout_constraintTop_toBottomOf="@id/txt_layout_title" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@id/txt_log_in">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_number"
                        style="@style/StyleTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/img_mobile_icon"
                        android:hint="@string/mobile_no"
                        android:inputType="phone"
                        android:maxLength="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <include
                    android:id="@+id/layout_division_line"
                    layout="@layout/layout_or_division_line"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_mobile_number" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_between_edit_texts"
                    app:layout_constraintTop_toBottomOf="@id/layout_division_line">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_id"
                        style="@style/StyleTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/img_email_icon"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_between_edit_texts"
                    app:layout_constraintTop_toBottomOf="@id/layout_email_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/StyleTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/img_lock_icon"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="@integer/max_password_length" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/shape_rectangle_curved_green_gradient"
                    android:elevation="4dp"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:text="@string/log_in"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/size_btn_standard"
                    app:layout_constraintTop_toBottomOf="@id/layout_password" />

                <TextView
                    android:id="@+id/txt_new_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/source_sans_pro_bold_it"
                    android:text="@string/new_user"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/size_tagline_small"
                    app:layout_constraintEnd_toStartOf="@id/btn_sign_up"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_log_in" />

                <TextView
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semi_bold"
                    android:padding="6dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorDarkGreen"
                    android:textSize="@dimen/size_btn_medium"
                    app:layout_constraintBaseline_toBaselineOf="@id/txt_new_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txt_new_user" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>